objects/ssot__ProviderOffering__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BenefitId__c</fullName>
        <label>Benefit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactId__c</fullName>
        <label>Contact</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Provider Offering Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291146990_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProviderOffering_ContactId_map_Indiv_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>ProviderOffering_ContactId_map_Indiv_rel</relationshipLabel>
        <relationshipName>rel_1720291146990_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>